--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,20 +1,192 @@
 ---
+import MapPin from "phosphor-astro/MapPin.astro";
+import Student from "phosphor-astro/Student.astro";
+import Football from "phosphor-astro/Football.astro";
+import Code from "phosphor-astro/Code.astro";
+import Database from "phosphor-astro/Database.astro";
+import Java from "phosphor-astro/Coffee.astro";
+import Atom from "phosphor-astro/Atom.astro";
+import InstagramLogo from "phosphor-astro/InstagramLogo.astro";
+import WhatsappLogo from "phosphor-astro/WhatsappLogo.astro";
+import CaretRight from "phosphor-astro/CaretRight.astro";
 
+const Cards = [
+	{
+		id: "location",
+		title: "Pilar, Buenos Aires",
+		icon: MapPin,
+	},
+	{
+		id: "Whatsapp",
+		title: "Whatsapp",
+		icon: WhatsappLogo,
+		ref: "https://wa.me/5491128611753",
+	},
+	{
+		id: "Instagram",
+		title: "Instagram",
+		icon: InstagramLogo,
+		ref: "https://www.instagram.com/francolacava/",
+	},
+	{
+		id: "student",
+		title: "Estudiante de Ciencias de Datos en la UBA",
+		icon: Student,
+	},
+	{
+		id: "rugby",
+		title: "Juego al rugby en Deportiva Francesa",
+		icon: Football,
+	},
+	{
+		id: "web",
+		title: "Herramientas de desarrollo web",
+		icon: Code,
+	},
+];
+
+const hiddenCards = [
+	{
+		id: "React",
+		title: "React",
+		icon: Atom,
+	},
+	{
+		id: "Astro",
+		title: "Astro",
+		image: `<svg width="24" height="24" viewBox="0 0 256 256" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M163.008 18.929c1.944 2.413 2.935 5.67 4.917 12.181l43.309 142.27a180.277 180.277 0 00-51.778-17.53l-28.198-95.29a3.67 3.67 0 00-7.042.01l-27.857 95.232a180.225 180.225 0 00-52.01 17.557l43.52-142.281c1.99-6.502 2.983-9.752 4.927-12.16a15.999 15.999 0 016.484-4.798c2.872-1.154 6.271-1.154 13.07-1.154h31.085c6.807 0 10.211 0 13.086 1.157a16.004 16.004 0 016.487 4.806z" fill="white"/>
+            <path fill-rule="evenodd" clip-rule="evenodd" d="M168.19 180.151c-7.139 6.105-21.39 10.268-37.804 10.268-20.147 0-37.033-6.272-41.513-14.707-1.602 4.835-1.961 10.367-1.961 13.902 0 0-1.056 17.355 11.015 29.426 0-6.268 5.081-11.349 11.349-11.349 10.743 0 10.731 9.373 10.721 16.977v.679c0 11.542 7.054 21.436 17.086 25.606a23.27 23.27 0 01-2.339-10.2c0-11.008 6.463-15.107 13.974-19.87 5.976-3.79 12.616-8.001 17.192-16.449a31.024 31.024 0 003.743-14.82c0-3.299-.513-6.479-1.463-9.463z" fill="white"/>
+        </svg>`,
+	},
+	{
+		id: "Database",
+		title: "Database (mongoDB)",
+		icon: Database,
+	},
+	{
+		id: "Java",
+		title: "Java",
+		icon: Java,
+	},
+];
 ---
 
 <style>
-	.gradient-bg {
-		background: linear-gradient(to bottom, #1a1a1a, #000000);
-		min-height: 100vh;
-		width: 100%;
+	@keyframes fadeIn {
+		from {
+			opacity: 0;
+			transform: translateX(-20px);
+		}
+		to {
+			opacity: 1;
+			transform: translateX(0);
+		}
+	}
+
+	@keyframes fadeOut {
+		from {
+			opacity: 1;
+			transform: translateX(0);
+		}
+		to {
+			opacity: 0;
+			transform: translateX(-20px);
+		}
+	}
+
+	.hiddenCard {
+		opacity: 0;
+	}
+
+	.hiddenCard.show {
+		animation: fadeIn 0.3s ease-out forwards;
+	}
+
+	.hiddenCard.hide {
+		animation: fadeOut 0.3s ease-out forwards;
 	}
 </style>
 
-<div class="gradient-bg flex">
-	<div class="flex">
+<script>
+	const button = document.getElementById("web");
+	const cards = document.querySelectorAll(".hiddenCard");
+	let isShowing = false;
 
-	</div>
-	<div class="flex">
-		<h1>Welcome to Astro!</h1>
+	button?.addEventListener("click", () => {
+		isShowing = !isShowing;
+		cards.forEach((card) => {
+			if (isShowing) {
+				requestAnimationFrame(() => {
+					card.classList.add("show");
+					card.classList.remove("hide");
+				});
+			} else {
+				card.classList.add("hide");
+				card.classList.remove("show");
+			}
+		});
+	});
+</script>
+
+<div class="flex text-white mt-20">
+	<div
+		class="flex flex-col lg:flex-row w-[90%] max-w-7xl min-h-[700px] m-auto bg-[#1a1a1a]/40 backdrop-blur-sm rounded-2xl border border-white/10 shadow-xl p-4"
+	>
+		<img
+			src="./personal.jpg"
+			alt="personal"
+			class="size-56 lg:size-96 rounded-full m-auto object-cover border-4 border-white/10 shadow-2xl hover:scale-105 transition-transform duration-300"
+		/>
+		<div class="flex flex-col justify-center gap-8 p-4">
+			<h1
+				class="text-4xl lg:text-6xl font-bold bg-gradient-to-r from-white to-gray-500 bg-clip-text text-transparent"
+			>
+				Franco Lacava Botte
+			</h1>
+			<div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+				{
+					Cards.map((card) => (
+						<div
+							class={`flex gap-3 p-4 rounded-xl bg-white/5 hover:bg-white/10 transition-colors items-center duration-300 border border-white/5
+${card.ref || card.id == "web" ? "cursor-pointer" : "cursor-default"}
+							`}
+							id={`${card.id}`}
+							onclick={
+								card.ref && `window.location.href='${card.ref}'`
+							}
+						>
+							<card.icon class="size-6" />
+							<p class="text-lg text-gray-200">{card.title}</p>
+							{(card.ref || card.id == "web") && (
+								<CaretRight class="size-6" />
+							)}
+						</div>
+					))
+				}
+				{
+					hiddenCards.map((card) => (
+						<div
+							class="flex cursor-default gap-3 p-4 rounded-xl bg-white/5 hover:bg-white/10 transition-colors duration-300 border border-white/5 hiddenCard items-center"
+							id={`${card.id}`}
+						>
+							{card.icon ? (
+								<card.icon class="size-6" />
+							) : (
+								<Fragment set:html={card.image} />
+							)}
+							<p class="text-lg text-gray-200">{card.title}</p>
+						</div>
+					))
+				}
+			</div>
+			<div
+				class="flex px-6 py-3 rounded-xl bg-white/5 hover:bg-white/10 transition-colors duration-300 w-fit justify-center items-center gap-3 cursor-pointer border border-white/5"
+				onclick={`window.location.href='#proyects'`}
+			>
+				<p class="text-2xl font-light">Conocer mis proyectos</p>
+				<CaretRight class="size-6" />
+			</div>
+		</div>
 	</div>
 </div>
