--- a/src/components/Welcome.astro
+++ b/src/components/Welcome.astro
@@ -1,14 +1,21 @@
 ---
 import MapPin from "phosphor-astro/MapPin.astro";
 import Student from "phosphor-astro/Student.astro";
-import Football from "phosphor-astro/Football.astro";
 import Code from "phosphor-astro/Code.astro";
 import Database from "phosphor-astro/Database.astro";
 import Java from "phosphor-astro/Coffee.astro";
 
+import Personal from "./public/personal.jpg";
+
+import React from "./public/react.png";
+import Javascript from "./public/Javascript.png";
+import Tailwind from "./public/tailwind.png";
+import Astro from "./public/astro.jpg";
+
 import InstagramLogo from "phosphor-astro/InstagramLogo.astro";
 import WhatsappLogo from "phosphor-astro/WhatsappLogo.astro";
 import CaretRight from "phosphor-astro/CaretRight.astro";
+import { Image } from "astro:assets";
 
 const Cards = [
 	{
@@ -34,13 +41,8 @@ const Cards = [
 		icon: Student,
 	},
 	{
-		id: "rugby",
-		title: "Juego al rugby en Deportiva Francesa",
-		icon: Football,
-	},
-	{
 		id: "web",
-		title: "Herramientas de desarrollo web",
+		title: "Backend & Frontend developer",
 		icon: Code,
 	},
 ];
@@ -49,25 +51,25 @@ const hiddenCards = [
 	{
 		id: "React",
 		title: "React",
-		image: "./react.png",
+		image: React,
 		type: "image",
 	},
 	{
 		id: "Javascript",
 		title: "Javascript",
-		image: "./Javascript.png",
+		image: Javascript,
 		type: "image",
 	},
 	{
 		id: "Tailwind",
 		title: "Tailwind",
-		image: "./tailwind.png",
+		image: Tailwind,
 		type: "image",
 	},
 	{
 		id: "Astro",
 		title: "Astro",
-		image: "./astro.png",
+		image: Astro,
 		type: "image",
 	},
 	{
@@ -87,7 +89,7 @@ const hiddenCards = [
 	@keyframes fadeIn {
 		from {
 			opacity: 0;
-			transform: translateY(-20px);
+			transform: translateY(-50px);
 		}
 		to {
 			opacity: 1;
@@ -102,12 +104,16 @@ const hiddenCards = [
 		}
 		to {
 			opacity: 0;
-			transform: translateY(-20px);
+			transform: translateY(-50px);
 		}
 	}
 
 	.hiddenCard {
 		opacity: 0;
+		transition:
+			opacity 0.3s ease,
+			transform 0.3s ease;
+		transform: translateY(20px);
 	}
 
 	.hiddenCard.show {
@@ -116,6 +122,56 @@ const hiddenCards = [
 
 	.hiddenCard.hide {
 		animation: fadeOut 0.3s ease-out forwards;
+	}
+
+	.card {
+		position: relative;
+		display: flex;
+		align-items: center;
+		gap: 1rem;
+		padding: 1rem;
+		border-radius: 1rem;
+		background: linear-gradient(to right, #2b2b2b, #1e1e1e);
+		border: 1px solid rgba(255, 255, 255, 0.1);
+		box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+	}
+
+	.card p {
+		color: #e0e0e0;
+		font-size: 1.1rem;
+	}
+
+	.card img {
+		width: 2rem;
+		height: 2rem;
+	}
+
+	.cardIcon {
+		color: #5cace5;
+		transition: color 0.3s ease;
+	}
+
+	.hiddenTrigger {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		padding: 1rem 2rem;
+		border-radius: 1rem;
+		background: #1e1e1e;
+		border: 1px solid rgba(255, 255, 255, 0.1);
+		color: #e0e0e0;
+		cursor: pointer;
+		transition:
+			transform 0.3s ease,
+			background 0.3s ease,
+			color 0.3s ease;
+	}
+
+	.hiddenTrigger:hover {
+		background: #2b2b2b;
+		color: #ffffff;
+		transform: translateY(-5px);
+		box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
 	}
 </style>
 
@@ -127,90 +183,75 @@ const hiddenCards = [
 	button?.addEventListener("click", () => {
 		isShowing = !isShowing;
 		cards.forEach((card) => {
-			if (isShowing) {
-				requestAnimationFrame(() => {
-					card.classList.add("show");
-					card.classList.remove("hide");
-				});
-			} else {
-				card.classList.add("hide");
-				card.classList.remove("show");
-			}
+			card.classList.toggle("show", isShowing);
+			card.classList.toggle("hide", !isShowing);
 		});
 	});
 </script>
 
-<div class="flex text-white mt-20">
-	<div
-		class="flex flex-col lg:flex-row w-[90%] max-w-7xl min-h-[700px] m-auto bg-[#1a1a1a]/40 backdrop-blur-sm rounded-2xl border border-white/10 shadow-xl p-4"
-	>
-		<div class="flex flex-col justify-center items-center">
-			<img
-				src="./personal.jpg"
-				alt="personal"
-				class="size-56 lg:size-96 rounded-full m-auto object-cover border-4 border-white/10 shadow-2xl hover:scale-105 transition-transform duration-300"
-			/>
+<div
+	class="flex flex-col lg:flex-row w-[90%] text-white min-h-[700px] mt-10 m-auto bg-[#1a1a1a]/40 backdrop-blur-sm rounded-2xl border border-white/10 shadow-xl p-6 gap-8"
+>
+	<div class="flex flex-col mt-5 lg:w-1/3 gap-5">
+		<Image
+			src={Personal}
+			alt="personal"
+			loading="eager"
+			fetchpriority="high"
+			class="object-cover size-96 rounded-full border-4 border-white/10 shadow-2xl md:hover:scale-105 transition-transform duration-300"
+		/>
+		<p class="text-md text-white/80">
+			Estudiante de primer año en Ciencias de Datos en la UBA,
+			desarrollador web y apasionado por la tecnología. Juego al rugby en
+			Deportiva Francesa, deporte que me enseñó a ser parte de un equipo y
+			ser una persona honesta.
+		</p>
+	</div>
+
+	<div class="flex flex-col justify-center gap-8 p-4 lg:w-2/3">
+		<h1
+			class="text-4xl lg:text-6xl font-bold text-white bg-clip-text text-transparent"
+		>
+			Franco Lacava Botte
+		</h1>
+		<div class="grid grid-cols-1 md:grid-cols-2 w-full gap-4">
+			{
+				Cards.map((card) => (
+					<div
+						class="card md:hover:scale-105 transition-transform duration-300 "
+						id={`${card.id}`}
+						onclick={
+							card.ref && `window.location.href='${card.ref}'`
+						}
+					>
+						<card.icon class="cardIcon size-6" />
+						<p>{card.title}</p>
+						{(card.ref || card.id === "web") && (
+							<CaretRight class="cardIcon size-6 ml-auto" />
+						)}
+					</div>
+				))
+			}
 		</div>
 
-		<div class="flex flex-col justify-center gap-8 p-4">
-			<h1
-				class="text-4xl lg:text-6xl font-bold bg-gradient-to-r from-white to-gray-500 bg-clip-text text-transparent"
-			>
-				Franco Lacava Botte
-			</h1>
-			<div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-				{
-					Cards.map((card) => (
-						<div
-							class={`flex gap-3 p-4 rounded-xl bg-white/5 hover:bg-white/10 transition-colors items-center duration-300 border border-white/5
-${card.ref || card.id == "web" ? "cursor-pointer" : "cursor-default"}
-							`}
-							id={`${card.id}`}
-							onclick={
-								card.ref && `window.location.href='${card.ref}'`
-							}
-						>
-							<card.icon class="size-6" />
-							<p class="text-lg text-gray-200">{card.title}</p>
-							{(card.ref || card.id == "web") && (
-								<CaretRight class="size-6" />
-							)}
-						</div>
-					))
-				}
-				<div class="grid grid-cols-2 w-full col-span-2 gap-4">
-					{
-						hiddenCards.map((card) => (
-							<div
-								class="flex cursor-default gap-3 p-4 rounded-xl bg-white/5 hover:bg-white/10 transition-colors duration-300 border border-white/5 hiddenCard items-center"
-								id={`${card.id}`}
-							>
-								{card.icon ? (
-									<card.icon class="size-6" />
-								) : card.type == "svg" ? (
-									<Fragment set:html={card.image} />
-								) : (
-									<img
-										src={card.image}
-										alt={card.title}
-										class="w-6"
-									/>
-								)}
-								<p class="text-lg text-gray-200">
-									{card.title}
-								</p>
-							</div>
-						))
-					}
-				</div>
-			</div>
-			<div
-				class="flex px-6 py-3 rounded-xl bg-white/5 hover:bg-white/10 transition-colors duration-300 w-fit justify-center items-center gap-3 cursor-pointer border border-white/5"
-				onclick={`window.location.href='#proyects'`}
-			>
-				<p class="text-2xl font-light">Conocer mis proyectos</p>
-				<CaretRight class="size-6" />
-			</div>
+		<div class="grid grid-cols-1 md:grid-cols-2 w-full gap-4 mt-6">
+			{
+				hiddenCards.map((card) => (
+					<div class="card hiddenCard md:hover:scale-105 transition-transform duration-300">
+						{card.icon ? (
+							<card.icon class="cardIcon size-6" />
+						) : (
+							<img src={card.image.src} alt={card.title} />
+						)}
+						<p>{card.title}</p>
+					</div>
+				))
+			}
+		</div>
+
+		<div class="hiddenTrigger" onclick={`window.location.href='#proyects'`}>
+			<p class="text-2xl font-light">Conocer mis proyectos</p>
+			<CaretRight class="size-6 ml-auto" />
 		</div>
 	</div>
 </div>
