--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>Franco Lacava B</title>
 	</head>
 	<body>
 		<slot />
@@ -13,14 +13,21 @@
 </html>
 
 <style>
+	@keyframes gradient {
+		0% { background-position: 0% 50%; }
+		50% { background-position: 100% 50%; }
+		100% { background-position: 0% 50%; }
+	}
+
 	html,
 	body {
 		margin: 0;
 		width: 100%;
-		height: 2000px;
-		background: linear-gradient(to bottom, #1a1a1a, #000000);
-		min-height: 100vh;
-		width: 100%;
+		height: 100%;
+		background: linear-gradient(135deg, #1a1a1a 0%, #000000 100%);
+		background-size: 200% 200%;
+		background-color: #1a1a1a;
+		animation: gradient 100s ease infinite;
 		scroll-behavior: smooth;
 	}
 </style>
